# marionetta

./: Controller.hs  Gloss.hs  IFigura.hs  Interfaccia.hs  LICENSE  Linguaggio.hs  Marionetta.cabal  Marionetta.hs  Math.hs  Model.hs  Movie.hs  Run.hs  View.hs  marionetta.cabal  marionetta.hs
Data/: Zip.hs
Data/List/: Zipper.hs
Data/Tree/: Missing.hs
Interface/: Register.hs
Render/: Gloss.hs
