name: Marionetta
version: 0.1
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright:
maintainer: paolo.veronelli@gmail.com
build-depends: base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               containers -any, containers -any, containers -any, containers -any,
               containers -any, containers -any, containers -any, containers -any,
               containers -any, containers -any, containers -any, containers -any,
               containers -any, containers -any, containers -any, containers -any,
               gloss -any, gloss -any, gloss -any, gloss -any, gloss -any,
               gloss -any, gloss -any, gloss -any, gloss -any, gloss -any,
               gloss -any, gloss -any, gloss -any, gloss -any, gloss -any,
               gloss -any, mtl -any, mtl -any, mtl -any, mtl -any, mtl -any,
               mtl -any, mtl -any, mtl -any, mtl -any, mtl -any, mtl -any,
               mtl -any, mtl -any, mtl -any, mtl -any, mtl -any, mtl -any,
               mtl -any, mtl -any, mtl -any, mtl -any, mtl -any, mtl -any,
               mtl -any, mtl -any, mtl -any, mtl -any, mtl -any, mtl -any,
               mtl -any, mtl -any, mtl -any, gloss -any, gloss -any, gloss -any,
               gloss -any, gloss -any, gloss -any, gloss -any, gloss -any,
               gloss -any, gloss -any, gloss -any, gloss -any, gloss -any,
               gloss -any, gloss -any, gloss -any, containers -any,
               containers -any, containers -any, containers -any, containers -any,
               containers -any, containers -any, containers -any, containers -any,
               containers -any, containers -any, containers -any, containers -any,
               containers -any, containers -any, containers -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any
stability:
homepage: https://github.com/paolino/marionetta
package-url:
bug-reports:
synopsis: a framework to simulate marionetta movements
description: .
category: Data
author: Paolo Veronelli
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Data.List.Zipper Data.Tree.Missing Data.Zip
                 Interfaccia Linguaggio Model
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: .
other-modules: Interface.Register
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
 
executable: marionetta
main-is: Marionetta.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: .
other-modules: Interface.Register
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: